<resources>
    <string name="app_name">PersonalCounter</string>
    <string name="Button">Add</string>
    <string name="Return">Return</string>
    <string name="Reset">Reset Data</string>
    <string name="Restore">Restore Data</string>
    <string name="Stats">Stats</string>
    <string name="Settings">Settings</string>
    <string name="Null">Null</string>


    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="price_title">Price per pack</string>
    <string name="theme_title">App Theme</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>